# bmi-compose

./: README.md  bmi1Conf.txt  bmi2Conf.txt  bound.txt  mergedConf.txt  pyproject.toml  requirements.txt  setup.py  snow.txt  vegetation.txt
.github/workflows/: python-tests-conda.yml
examples/: cem_and_waves.ipynb  cem_and_waves_composed.ipynb  cem_waves_composed.ipynb  cem_waves_test.ipynb  gipl_and_ecsimplesnow(1).ipynb  gipl_and_ecsimplesnow.ipynb  gipl_and_ecsimplesnow_composed.ipynb  gipl_and_ecsimplesnow_test.ipynb
src/: __init__.py  bmi_compose.py  bmi_compose_GIPL_EC.py  test_compose.py
src/bmi_compose/: __init__.py  compose.py  identity.py  pymt_compose.py
test/: .test.cfg.kate-swp  bmi1Conf.cfg  bmi1Conf.txt  bmi2Conf.cfg  bmi2Conf.txt  cem_and_waves.ipynb  cem_waves_test.ipynb  geo.txt  gipl_and_ecsimplesnow(1).ipynb  gipl_and_ecsimplesnow_test.ipynb  gipl_config.cfg  grid.txt  initial.txt  mergedConf.cfg  mergedConf.txt  sites.txt  test.cfg  test_compose.py  waves.txt
tests/: test_cem_waves_notebook_comparison.py  test_compose_helpers.py  test_identity_composition.py  test_pymt_compose.py
