[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-compose"
version = "0.1.0"
description = "Compositional combinators for BMI models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "bmipy",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
examples = [
    "pymt",
    "seaborn",
    "matplotlib",
    "pymt_ecsimplesnow"
]

[tool.setuptools.packages.find]
where = ["src"]
